fix: fixed bug with context menu overlapping by open windows

--- a/src/components/Taskbar/Taskbar.module.scss
+++ b/src/components/Taskbar/Taskbar.module.scss
@@ -9,7 +9,7 @@
   padding: 0 12px;
   background-color: $dark-primary;
   color: $light-primary;
-  z-index: 10;
+  z-index: 4;
 }
 
 .logo {
