--- a/src/styles/extensions.scss
+++ b/src/styles/extensions.scss
@@ -7,7 +7,7 @@
   line-height: 15px;
   backdrop-filter: blur(10px);
   user-select: none;
-  z-index: 2;
+  z-index: 5;
 }
 
 %menuitem {
